fix detailed style in quiz page: * use $corporateRedColor variable for red text color * make sure the whole area of background image is shown * make sure the margin and line spacing of quiz aims and question text match the one in mockup * make sure the image size and text size in quiz footer match the one in mockup * align the left and right radio buttons with the page margin

--- a/src/css/101Components/_quiz.scss
+++ b/src/css/101Components/_quiz.scss
@@ -18,11 +18,12 @@
 
         .quiz-title {
             h1, h2 {
-                color: red;
+                color: $corporateRedColor;
             }
             h1 {
                 font-size: 2rem;
-                margin-bottom: 0.5rem;
+                margin-top: 0.5rem;
+                margin-bottom: 0rem;
             }
             h2 {
                 font-size: 1.5rem;
@@ -48,6 +49,7 @@
                 color: white;
                 display: block;
                 min-height: 10rem;
+                margin-top: 2rem;
             }
 
             .quiz-answer-choices {
@@ -59,6 +61,14 @@
                 flex: 1;
             }
 
+            .quiz-answer-choice-left {
+                text-align: left;
+            }
+
+            .quiz-answer-choice-right {
+                text-align: right;
+            }
+
             .quiz-answer-feedback {
                 padding-top: 1rem;
                 padding-bottom: 1rem;
@@ -67,6 +77,10 @@
 
                 .answer {
                     flex: 1;
+
+                    .answer-text {
+                        font-size: 1.5rem;
+                    }
                 }
 
                 .next-question-button-div {
@@ -99,6 +113,7 @@
 
         .quiz-content {
             background-image: url('../images/ResourcesForYou/Quiz/bg_Quiz-Finish.png');
+            background-size: cover;
             padding: 20px;
             display: flex;
             justify-content: center;
